[metadata]
name = begins
author = Aaron Iles
author-email = aaron.iles@gmail.com
summary = Command line programs for busy developers
description-file = README.rst
home-page = http://begins.readthedocs.org
license = ASL
classifier =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: MacOS :: MacOS X
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.2
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        Topic :: Software Development :: Libraries :: Python Module
[backwards_compat]
zip_safe = false
[files]
packages =
    begins